--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: kng2255@gmail.com
 # email_title: Email (Email title override)
 # phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
-website: 34.64.248.96:8000 (eg. https://google.com)(optional)
+website: 34.64.248.96:8000 (eg. wordpress website )
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
