--- a/_config.yml
+++ b/_config.yml
@@ -29,15 +29,15 @@ github_username:  MIN9MIN
 # linkedin_username: jekyll
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: sweetpong
+youtube_username: Pong Sweet
 # orcid_username: 0000-0000-0000-0000
 # googlescholar_username: D847cGsAAAAJ
 
 # Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+#additional_links:
+#- title: Link name
+#  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+# url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
