--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Lists
     - Tables
     - <a href="google.com">Links</a>
-    - Images ![alt text](/images/my major.jpg)
+    - Major ![alt text](/images/my major.jpg)
 
 content:
   - title: Projects # Title for the section
