--- a/_config.yml
+++ b/_config.yml
@@ -51,13 +51,10 @@ youtube_username: /channel/UC8U7EJDsktYTFcJZUtkeKcA
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/my photo.jpg
 about_content: | # this will include new lines to allow paragraphs
-  #Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-  안녕하세요 :raising_hand: <mark>미래의 개발자</mark>가 되기 위해 노력하는 한림대학교 재학생 강민구입니다. 
-  #You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
+  안녕하세요 :smiley: <mark>미래의 개발자</mark>가 되기 위해 노력하는 한림대학교 재학생 <highlight>강민구</highlight>입니다. 
     - Lists
     - Tables
-    - <a href="google.com">Links</a>
-    - Major ![alt text](/images/my major.jpg)
+    - 전공 ![alt text](/images/my major.jpg)
 
 content:
   - title: Projects # Title for the section
