--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ youtube_username: Pong Sweet
 about_profile_image: images/my photo.jpg
 about_content: | # this will include new lines to allow paragraphs
   <p> 안녕하세요 <mark>미래의 개발자</mark>가 되기 위해 노력하는 한림대학교 재학생 <b>강민구</b>입니다. </p>
-    - 학교 : 한림대학교 
-    - 학년 : 3학년
-    - 전공 : 빅데이터 학과 ![alt text](/images/my major.jpg)
+    - School : 한림대학교 
+    - Grade : 3학년
+    - Major : 빅데이터학과  ![alt text](/images/my major.jpg)
 
 content:
   - title: Projects # Title for the section
@@ -74,7 +74,7 @@ content:
             icon: fab fa-github
             url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
         quote: >
-          Short overview of the project (optional)
+          오프소스SW개발도구활용에서 배운 GIT을 이용한 활동에서 RESUME를 Fork하여 활용해보는 Project
         description: | # this will include new lines to allow paragraphs
           ![alt text](/images/깃허브.PNG)
           A modern static resume template and theme. Powered by Jekyll and GitHub pages.
