--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ about_content: | # this will include new lines to allow paragraphs
   <p> 안녕하세요 <mark>미래의 개발자</mark>가 되기 위해 노력하는 한림대학교 재학생 <b>강민구</b>입니다. </p>
     - School : 한림대학교 
     - Grade : 3학년
-    - Major : 빅데이터학과  ![alt text](/images/my major.jpg)
+    - Major ![alt text](/images/my major.jpg)
 
 content:
   - title: Projects # Title for the section
@@ -89,24 +89,7 @@ content:
         quote: >
           This is my school in Kangwondo, Chuncheon
         description: | # this will include new lines to allow paragraphs
-          Description of role
-  - title: Education
-    layout: list
-    content:
-      - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
-        quote: >
-          Short institution or course description (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of qualification
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+          Description of role  images/다운로드.jfif
 
 # Footer
 footer_show_references: true
