--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           ![alt text](/images/깃허브.PNG)
           A modern static resume template and theme. Powered by Jekyll and GitHub pages.
-  - title: Experience
+  - title: Education
     layout: list
     content:
       - layout: right
@@ -89,8 +89,21 @@ content:
         quote: >
           This is my school in Kangwondo, Chuncheon
         description: | # this will include new lines to allow paragraphs
-          Description of role  images/다운로드.jfif
-
+          Description of role  ![alt text](/images/다운로드.jfif)
+   
+   - title: My Interest
+     layout: list
+     content:
+      - layout: right
+      title : 백준 알고리즘 공부하기
+      sub_title: 매주 1~2개씩 공부
+      caption: October 2022 ~ present
+      link: https://www.acmicpc.net/
+      quote: >
+        취업을 준비하기 위함과 프로그래밍에서 중요한 알고리즘을 잊어버리지 않기 위해서 주에 1~2개는 계속해서 공부하는 중입니다.
+      description:
+        내 제출 현황
+   
 # Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
