--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ content:
         quote: >
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
-          Description of qualification <img src = /images/baekjoon.png> 
+          Description of qualification ![initial](/images/baekjoon.png) 
 
 # Footer
 footer_show_references: true
