--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,9 @@ content:
         caption: Date Range [March 2017 ~ present]
         link: https://www.hallym.ac.kr/
         quote: >
-          This is my school in Kangwondo, Chuncheon
+          한림대학교는 강원도 춘천시에 있는 대한민국의 4년제 사립 대학이다. 
+          의사이자 교육자였던 윤덕선이 자신의 아호인 일송을 따 1982년 1월 학교법인 일송학원을 설립하고 
+          같은 해 3월 한림대학을 개교하였다. 한림대학은 1989년 종합대학인 한림대학교로 개편되었다.
         description: | # this will include new lines to allow paragraphs
           ![initial](/images/다운로드.jfif)
  
