--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ content:
         quote: >
           백준 알고리즘을 통해서 프로그래밍 실력을 높이고 개발을 위해 필요한 코딩감각을 잃지 않도록 꾸준히 하는 중입니다.
         description: | # this will include new lines to allow paragraphs
-          Description of qualification ![initial](/images/백준.png) 
+          ![initial](/images/백준.png) 
 
 # Footer
 footer_show_references: true
