--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: right
+      - layout: left
         title: Hallym Univ.
         sub_title: Student
         caption: Date Range [March 2017 ~ present]
@@ -101,8 +101,6 @@ content:
         sub_title: 매주 1~2개 진행하는 알고리즘 문제풀이
         caption: Date Range [October 2022 ~ present]
         link: https://www.acmicpc.net/ 
-        
-        ![initial](/images/백준.png)
         quote: >
           백준 알고리즘을 통해서 프로그래밍 실력을 높이고 개발을 위해 필요한 코딩감각을 잃지 않도록 꾸준히 하는 중입니다.
         description: | # this will include new lines to allow paragraphs
