--- a/_config.yml
+++ b/_config.yml
@@ -87,16 +87,17 @@ content:
         caption: Date Range [March 2017 ~ present]
         link: https://www.hallym.ac.kr/
         quote: >
+          This is my College in Chuncheon,Kangwondo.
+        description: | # this will include new lines to allow paragraphs
+          ![initial](/images/다운로드.jfif)
           한림대학교는 강원도 춘천시에 있는 대한민국의 4년제 사립 대학이다. 
           의사이자 교육자였던 윤덕선이 자신의 아호인 일송을 따 1982년 1월 학교법인 일송학원을 설립하고 
           같은 해 3월 한림대학을 개교하였다. 한림대학은 1989년 종합대학인 한림대학교로 개편되었다.
-        description: | # this will include new lines to allow paragraphs
-          ![initial](/images/다운로드.jfif)
  
   - title: My Interest
     layout: list
     content:
-      - layout: top-right
+      - layout: left
         title: 백준 알고리즘 문제풀기
         sub_title: 매주 1~2개 진행하는 알고리즘 문제풀이
         caption: Date Range [October 2022 ~ present]
@@ -104,7 +105,7 @@ content:
         quote: >
           백준 알고리즘을 통해서 프로그래밍 실력을 높이고 개발을 위해 필요한 코딩감각을 잃지 않도록 꾸준히 하는 중입니다.
         description: | # this will include new lines to allow paragraphs
-          
+          ![initial](/images/백준.png)
 
 # Footer
 footer_show_references: true
