--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  MIN9MIN
 #linkedin_username: jekyll
 #xing_username: jekyll
 #pinterest_username: jekyll
-youtube_username: Pong Sweet
+youtube_username: https://www.youtube.com/channel/UC8U7EJDsktYTFcJZUtkeKcA
 #orcid_username: 0000-0000-0000-0000
 #googlescholar_username: D847cGsAAAAJ
 
